unpackaged/main/default/objects/FS_Event_Bundle__c/FS_Event_Bundle__c.object-meta.xml
<CustomObject>
    <label>Event Bundle</label>
    <nameField>
        <displayFormat>EB-{000000}</displayFormat>
        <label>Event Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>