unpackaged/main/default/objects/FS_Event_Bundle__c/fields/FS_Child_Item__c.field-meta.xml
<CustomField>
    <fullName>FS_Child_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Bundled with Items</relationshipLabel>
    <relationshipName>Event_Bundles1</relationshipName>
    <type>Lookup</type>
</CustomField>