unpackaged/main/default/objects/FS_Event_Bundle__c/fields/FS_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Event_Name__c</fullName>
    <formula>FS_Child_Item__r.EventApi__Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Name of the Event linked to the Child Item.</inlineHelpText>
    <label>Event Name</label>
    <type>Text</type>
</CustomField>