unpackaged/main/default/objects/FS_Event_Bundle__c/fields/FS_Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>FS_Parent_Item__c</fullName>
    <label>Parent Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Event Bundle</relationshipLabel>
    <relationshipName>Event_Bundles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>