unpackaged/main/default/objects/FS_Event_Bundle__c/fields/FS_Schedule_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Schedule_Item_Id__c</fullName>
    <formula>FS_Child_Item__r.EventApi__Schedule_Item__c</formula>
    <inlineHelpText>The Id of the Schedule Item linked to the the Child Item.</inlineHelpText>
    <label>Schedule Item Id</label>
    <type>Text</type>
</CustomField>