unpackaged/main/default/objects/FS_Event_Bundle__c/fields/FS_Schedule_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Schedule_Item_Name__c</fullName>
    <formula>FS_Child_Item__r.EventApi__Schedule_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the Schedule Item linked to the Child Item.</inlineHelpText>
    <label>Schedule Item Name</label>
    <type>Text</type>
</CustomField>