unpackaged/main/default/objects/FS_Event_Bundle__c/fields/FS_Ticket_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Ticket_Type_Id__c</fullName>
    <formula>FS_Child_Item__r.EventApi__Ticket_Type__c</formula>
    <inlineHelpText>The Id of the Ticket Type linked to the the Child Item</inlineHelpText>
    <label>Ticket Type Id</label>
    <type>Text</type>
</CustomField>