unpackaged/main/default/objects/FS_Event_Bundle__c/fields/FS_Ticket_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Ticket_Type_Name__c</fullName>
    <formula>FS_Child_Item__r.EventApi__Ticket_Type__r.Name</formula>
    <inlineHelpText>The Name of the Ticket Type linked to the Child Item.</inlineHelpText>
    <label>Ticket Type Name</label>
    <type>Text</type>
</CustomField>