unpackaged/main/default/objects/FS_Event_Bundle__c/validationRules/Child_Item_Is_Event_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Child_Item_Is_Event_Validation</fullName>
    <active>true</active>
    <description>This validation rule checks for Child Item Is event true or not upon Insert and update</description>
    <errorConditionFormula>IF(FS_Child_Item__c!="",(IF( FS_Child_Item__r.OrderApi__Is_Event__c=TRUE ,false,true)),false)</errorConditionFormula>
    <errorMessage>The child item should be a valid event item</errorMessage>
</ValidationRule>